--- a/notebooks/Evaluation_data_generation.ipynb
+++ b/notebooks/Evaluation_data_generation.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "3b66adc9-995a-4230-8389-0945151d8002",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2c78d7fb-61d6-462a-96e4-ddcd88da89d2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7d818343-36db-4e02-889c-8dd4030eafc7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f050bc81-76ad-44a3-a32a-8ce65a92f3c2",
    "metadata": {},
    "outputs": [],
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2b01e394-a226-4406-82c7-204985f038a2",
    "metadata": {},
    "outputs": [],
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "e69c5f3a-adea-4a0c-9448-4419733682c1",
    "metadata": {},
    "outputs": [],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "8a9dc4d5-242c-4254-a914-3fabce369e14",
    "metadata": {},
    "outputs": [],
@@ -245,17 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "0105037f-b4ac-491f-9064-c95ddc02c23c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x1b4e177a970>"
+       "<minsearch.Index at 0x1b526511090>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "6b55d7f3-2ffc-4638-984c-bf943916ff12",
    "metadata": {},
    "outputs": [],
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "a61ccfcd-d471-472c-9b09-7a79b46f378e",
    "metadata": {},
    "outputs": [],
@@ -415,13 +416,13 @@
     "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "\n",
-    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
+    "#os.environ['OPENAI_API_KEY'] = openai_api_key\n",
     "client = OpenAI()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "24cc1642-6929-41d0-97f6-61c807ca79a7",
    "metadata": {},
    "outputs": [],
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 36,
    "id": "fbcd10ae-1436-4a12-a479-8070de546571",
    "metadata": {},
    "outputs": [],
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 33,
    "id": "d7e61a99-a026-4305-861e-8dd5ce5241fb",
    "metadata": {},
    "outputs": [],
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 34,
    "id": "5891846f-d155-4863-9855-412f52804bb8",
    "metadata": {},
    "outputs": [],
@@ -966,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "id": "91da7f59-c38f-4bf6-969d-de321c1a79d9",
    "metadata": {},
    "outputs": [],
@@ -976,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "id": "e10cba36-2388-4dd4-a4e5-50374a6be81f",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1045,7 @@
        "4   0  What is the equipment name of the Bosch model ..."
       ]
      },
-     "execution_count": 113,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "id": "2b5d5e4b-ce03-4401-a487-145dc67fca99",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "id": "85c568ec-e05a-472b-b2c0-da80914e8f89",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 18,
    "id": "f83b378e-a3ca-41f2-b2af-49b1eb44c432",
    "metadata": {},
    "outputs": [],
@@ -1178,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 19,
    "id": "bbe5a4c5-06a0-4289-85d0-a50b907a083e",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1190,7 @@
        " 'question': 'What is the recommended frequency for cleaning the filter of a Bosch Series 6 SMS6ZCI48E?'}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,12 +1201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "id": "43a00e3c-91df-49f7-9974-7bd411ee0671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n"
    ]
   },
   {
@@ -1799,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "id": "dfa95d38-75d6-43b0-8d2b-53ee61bd9b56",
    "metadata": {},
    "outputs": [],
@@ -1848,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 25,
    "id": "115ed897-2f12-4fa1-a185-387e7a6a050d",
    "metadata": {},
    "outputs": [
@@ -1859,7 +1860,7 @@
        " 'question': 'What is the recommended frequency for cleaning the filter of a Bosch Series 6 SMS6ZCI48E?'}"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2320,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 26,
    "id": "f8950f98-b127-4a5b-b71a-65354b61b0ef",
    "metadata": {},
    "outputs": [],
@@ -2330,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 27,
    "id": "3f75b2f9-1f72-4df8-9aef-c6f9871b3bc4",
    "metadata": {},
    "outputs": [],
@@ -2340,7 +2341,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 48,
+   "id": "bd9f4297-ed2c-46e3-b98d-133ef602fb2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt3_template = \"\"\"\n",
+    "You are an expert evaluator for a Retrieval-Augmented Generation (RAG) system.\n",
+    "Your task is to analyze the relevance of the generated answer to the given question.\n",
+    "Based on the relevance of the generated answer, you will classify it\n",
+    "as \"NON_RELEVANT\", \"PARTLY_RELEVANT\", or \"RELEVANT\".\n",
+    "\n",
+    "Please classify valid company names as \"RELEVANT\" answer.\n",
+    "Please consider part or parts required as \"RELEVANT\".\n",
+    "Please consider answer \"RELEVANT\" as long answer doesn't conflict with technical facts about the machine.\n",
+    "\n",
+    "Here is the data for evaluation:\n",
+    "\n",
+    "Question: {question}\n",
+    "Generated Answer: {answer_llm}\n",
+    "\n",
+    "Please analyze the content and context of the generated answer in relation to the question\n",
+    "and provide your evaluation in parsable JSON without using code blocks:\n",
+    "\n",
+    "{{\n",
+    "  \"Relevance\": \"NON_RELEVANT\" | \"PARTLY_RELEVANT\" | \"RELEVANT\",\n",
+    "  \"Explanation\": \"[Provide a brief explanation for your evaluation]\"\n",
+    "}}\n",
+    "\"\"\".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "4e52e8db-dedb-4a66-9810-f43321f12359",
    "metadata": {},
    "outputs": [],
@@ -2351,7 +2384,7 @@
     "    question = record['question']\n",
     "    answer_llm = rag(question, client)\n",
     "\n",
-    "    prompt = prompt2_template.format(\n",
+    "    prompt = prompt3_template.format(\n",
     "        question=question,\n",
     "        answer_llm=answer_llm\n",
     "    )\n",
@@ -2364,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 50,
    "id": "b97eb338-e95b-4c1e-abb9-7ccf28519007",
    "metadata": {},
    "outputs": [],
@@ -2383,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 51,
    "id": "58cd03ab-804a-45b4-a717-8870f7229d49",
    "metadata": {},
    "outputs": [
@@ -2391,25 +2424,177 @@
      "data": {
       "text/plain": [
        "relevance\n",
-       "RELEVANT           0.428815\n",
-       "PARTLY_RELEVANT    0.378132\n",
-       "NON_RELEVANT       0.192483\n",
-       "Non_Relevant       0.000569\n",
+       "PARTLY_RELEVANT    0.43\n",
+       "RELEVANT           0.34\n",
+       "NON_RELEVANT       0.23\n",
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_eval.relevance.value_counts(normalize=True)"
+    "df_eval_sample.relevance.value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 55,
+   "id": "6771c97e-0cb8-488a-b76b-c7d255ce40d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>answer</th>\n",
+       "      <th>id</th>\n",
+       "      <th>question</th>\n",
+       "      <th>relevance</th>\n",
+       "      <th>explanation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>The equipment that needs to be checked annuall...</td>\n",
+       "      <td>301</td>\n",
+       "      <td>What equipment needs to be checked annually?</td>\n",
+       "      <td>NON_RELEVANT</td>\n",
+       "      <td>The generated answer lists specific models of ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Mild detergent</td>\n",
+       "      <td>262</td>\n",
+       "      <td>What parts are required for cleaning the exter...</td>\n",
+       "      <td>NON_RELEVANT</td>\n",
+       "      <td>The generated answer 'Mild detergent' does not...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>The parts required for maintenance of the WRS5...</td>\n",
+       "      <td>301</td>\n",
+       "      <td>What parts are required for maintenance of WRS...</td>\n",
+       "      <td>NON_RELEVANT</td>\n",
+       "      <td>The answer provided, stating that a Multimeter...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>The type of maintenance recommended for the Bo...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>What type of maintenance is recommended for th...</td>\n",
+       "      <td>NON_RELEVANT</td>\n",
+       "      <td>The answer provided does not directly address ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>NONE. Inspecting the control board does not re...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Does inspecting the control board require any ...</td>\n",
+       "      <td>NON_RELEVANT</td>\n",
+       "      <td>The answer states that inspecting the control ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               answer   id  \\\n",
+       "12  The equipment that needs to be checked annuall...  301   \n",
+       "13                                     Mild detergent  262   \n",
+       "19  The parts required for maintenance of the WRS5...  301   \n",
+       "21  The type of maintenance recommended for the Bo...   20   \n",
+       "23  NONE. Inspecting the control board does not re...   59   \n",
+       "\n",
+       "                                             question     relevance  \\\n",
+       "12       What equipment needs to be checked annually?  NON_RELEVANT   \n",
+       "13  What parts are required for cleaning the exter...  NON_RELEVANT   \n",
+       "19  What parts are required for maintenance of WRS...  NON_RELEVANT   \n",
+       "21  What type of maintenance is recommended for th...  NON_RELEVANT   \n",
+       "23  Does inspecting the control board require any ...  NON_RELEVANT   \n",
+       "\n",
+       "                                          explanation  \n",
+       "12  The generated answer lists specific models of ...  \n",
+       "13  The generated answer 'Mild detergent' does not...  \n",
+       "19  The answer provided, stating that a Multimeter...  \n",
+       "21  The answer provided does not directly address ...  \n",
+       "23  The answer states that inspecting the control ...  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval_sample[df_eval_sample.relevance == 'NON_RELEVANT'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "83e23869-dbe4-4989-a106-f85ee0b85f30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The generated answer lists specific models of appliances from different brands without mentioning any general equipment that needs to be checked annually. It does not directly address the question asked.'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval_sample[df_eval_sample.relevance == 'NON_RELEVANT'].loc[12]['explanation']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "fcf9be51-e14b-481d-a75b-de2fe78d60c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The equipment that needs to be checked annually are the G 4228 SCU by Miele for inspecting spray arm seals and the LDP6810SS by LG for checking the water inlet valve.'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval_sample[df_eval_sample.relevance == 'NON_RELEVANT'].loc[12]['answer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "189d205f-dcc9-4ac5-b23c-069898a964a4",
    "metadata": {},
    "outputs": [],
@@ -2420,7 +2605,7 @@
     "    question = record['question']\n",
     "    answer_llm = rag(question, client)\n",
     "\n",
-    "    prompt = prompt2_template.format(\n",
+    "    prompt = prompt3_template.format(\n",
     "        question=question,\n",
     "        answer_llm=answer_llm\n",
     "    )\n",
@@ -2433,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 58,
    "id": "e9a0a0e3-e36e-4335-bddc-683677010304",
    "metadata": {},
    "outputs": [],
@@ -2452,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 60,
    "id": "f4102e45-0b85-4871-8d9f-52f14dbe1e80",
    "metadata": {},
    "outputs": [
@@ -2460,20 +2645,19 @@
      "data": {
       "text/plain": [
        "relevance\n",
-       "RELEVANT           0.428815\n",
-       "PARTLY_RELEVANT    0.378132\n",
-       "NON_RELEVANT       0.192483\n",
-       "Non_Relevant       0.000569\n",
+       "RELEVANT           0.825\n",
+       "PARTLY_RELEVANT    0.110\n",
+       "NON_RELEVANT       0.065\n",
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_eval.relevance.value_counts(normalize=True)"
+    "df_eval_sample4mini.relevance.value_counts(normalize=True)"
    ]
   },
   {
@@ -2566,7 +2750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
